add toritlas homefries pages and links in index

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/lasagna.html">World Best Lasagna</a>
+        <a href="./recipes/tortilas.html">Easy tortilas</a>
+        <a href="./recipes/homefries.html">Home-Fried Potatoes</a>
+         
     </body>
 </html>
