--- a/recipes/homefries.html
+++ b/recipes/homefries.html
@@ -14,42 +14,36 @@
 
     <h2>Description</h2>
 
-    <p>Making lasagna can be time-consuming,
-    but the results are <em>well</em> worth the wait.
-    You'll find a detailed ingredient list and step-by-step instructions in the recipe below,
-    but let's go over the basics:</p>
+    <p>Yummy home-style fried potatoes. Chunky and flavorful fried potatoes with onion, green pepper, and parsley. <em>well</em> worth the wait. </p>
 
-    <p>
         
-    </p>
+
     <h2>Ingredients</h2>
     <ul>
-        <li>Lean Ground Beef</li>
-        <li>Onion</li>
-        <li>Garlic - 2 cloves</li>
-        <li>Can of crushed tomatoes</li>
-        <li>Two cans of tomato sauce</li>
-        <li>Two cans of tomato paste</li>
-        <li>White Sugar - 2 table spoons</li>
-        <li>Spices</li>
-        <li>Lasagna noodles</li>
-        <li>Ricotta cheese</li>
-        <li>Egg - one</li>
-        <li>Parsley</li>
+        <li>4 red potatoes</li>
+        <li>3 tablespoons olive oil, divided</li>
+        <li>1 onion, chopped</li>
+        <li>1 green bell pepper, seeded and chopped</li>
+        <li>1 teaspoon salt</li>
+        <li>¾ teaspoon paprika</li>
+        <li>¼ teaspoon ground black pepper</li>
+        <li>¼ cup chopped fresh parsley</li>
     </ul>
 
     <h2>Steps</h2>
     <ol>
-        <li><p>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned. Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, fennel seeds, and pepper.
-            Simmer, covered, for about 1 1/2 hours, stirring occasionally.</p>
-        </li>
-        <li><p>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. Drain noodles, and rinse with cold water. In a mixing bowl, combine ricotta cheese with egg, remaining 2 tablespoons parsley, and 1/2 teaspoon salt.<p>
-        </li>
-        <li><p>Preheat the oven to 375 degrees F (190 degrees C).</p>
-        </li>
-        <li><p>To assemble, spread 1 1/2 cups of meat sauce in the bottom of a 9x13-inch baking dish. Arrange 6 noodles lengthwise over meat sauce. Spread with 1/2 of the ricotta cheese mixture. Top with 1/3 of the mozzarella cheese slices. Spoon 1 1/2 cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan cheese. Repeat layers, and top with remaining mozzarella and Parmesan cheese.
-             Cover with foil: to prevent sticking, either spray foil with cooking spray or make sure the foil does not touch the cheese.</p></li>
-        <li>Bake in the preheated oven for 25 minutes. Remove the foil and bake for an additional 25 minutes. Rest lasagna for 15 minutes before serving.</li>
+        <li><p>
+        Bring a large pot of salted water to a boil. Add potatoes and cook until tender but still firm, about 15 minutes. Drain, cool, and cut into 0.5 inch cubes.
+        </p></li>
+        <li><p>
+            Heat 1 tablespoon oil over medium-high heat. Add onion and green pepper. Cook, stirring often, until soft; about 5 minutes. Transfer to a plate and set aside.
+       </p></li>
+        <li><p>
+            Pour remaining 2 tablespoons oil into the skillet over medium-high heat. Add potato cubes, salt, paprika, and black pepper. Cook, stirring occasionally, until potatoes are browned; about 10 minutes.
+        </p></li>
+        <li><p>
+            Stir in onion-green pepper mix and parsley. Cook for another minute. Serve hot.
+        </p></li>
     </ol>
 
 
