Add list of recipe links

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">World Best Lasagna</a>
-        <a href="./recipes/tortilas.html">Easy tortilas</a>
-        <a href="./recipes/homefries.html">Home-Fried Potatoes</a>
-         
+        <ul>
+        <li> <a href="./recipes/lasagna.html">World Best Lasagna</a> </li>
+        <li> <a href="./recipes/tortillas.html">Easy Tortillas</a> </li>
+        <li> <a href="./recipes/homefries.html">Home-Fried Potatoes</a> </li>
+        </ul>   
     </body>
 </html>
